package logic.actor;

public abstract class Actor {
    // method
    public abstract int getLevel();

    public abstract void attack();
}
