package logic.item;

public abstract class Item {
	// method
    public abstract int getLevel();

    public abstract void effect();
}
